Cambio Fondo y color de los titulos

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <title>World of Warcraft Classic</title>
     <link rel="stylesheet" href="style/general.css">
 </head>
-<body>
+<body background="images/General/fondoRojo.jpg">
     <div class="contenedor">
     <header>
         <img src="images/General/banner1.jpg" alt="" class="banner">
@@ -28,10 +28,10 @@
             <h1>Guia de Profesiones</h1>
             <p>En esta seccion Home veremos una vista previa de las profesiones que veremos en World of Warcraft: Classic. <br>Esta guía esta pensada para aquellos jugadores que no estén familiarizados con el sistema de profesiones durante WoW Classic para que tengan un mejor entendimiento. <br>En el menu de navegación, también podrás ver guás de profesiones más específicas.</p>
 
-            <table><tr>
+            <table><tr><td>
                 <h2>Contenido</h2>
                 <ul>
-                    <ol><a href="#">1 Sistema de profesiones en WoW Classic</a></ol>
+                    <ol><a href="#sistProfesiones">1 Sistema de profesiones en WoW Classic</a></ol>
                     <ol><a href="#">2 Niveles de profesión</a></ol>
                     <ol><a href="#">3 Rangos de profesión</a></ol>
                     <ol><a href="#">4 Raciales de profesión</a></ol>
@@ -53,11 +53,11 @@
                         <ol><a href="#">7.3 Primeros Auxilios</a></ol>
                     </ol>
                 </ul>
-            </tr></table>
+            </td></tr></table>
         </article>
 
         <article>
-            <h3>Sistemas de Profesiones en WoW Classic</h3>
+            <a id="sistProfesiones"><h3>Sistemas de Profesiones en WoW Classic</h3></a>
             <p>Los jugadores podemos elegir entre dos Profesiones Primarias. Estas profesiones serían:</p>
             <ul>
                 <li>Alquimia</li>
@@ -142,7 +142,7 @@
             <h4>Desuello</h4>
             <p>Desuello es la profesión que complementa a Pelatería, ya que proporciona cueros, hierbas y escamas que son necesarias para algunas recetas. <br>Para poder desollar a un cuerpo que nos vaya a proporcionar cuero, necesitaremos tener siempre en nuestra mochila un <b>Cuchillo para Desollar</b> que debemos comprar previamente.</b></p>
             <h4>Encantamiento</h4>
-            <p>Con encantamiento podemos mejorar parte de nuestro equipo, poniendo dicho encantamiento en armas, zapatos, brazaletes, pecho, capa, guantes y escudo. Este encantamiento es permanente a no ser que nos cambiemos el objeto o pongamos otro encantamiento diferente en el mismo. <br>Para conseguir los materiales que necesitamos para hacer los encantamientos, tendremos que desencantar equipo que se convertirá en polvo. <br>Normalmente se suele emparejar esta profesión con Sastrería. <br>Para poder hacer Encantamiento, necesitaremos una Vara de encantamiento como <b>Vara rúnica de arcanista</b> que debemos tener siempre en nuestra mochila encima. Si lo tenemos en el banco, no podremos desencantar.</b>/p>
+            <p>Con encantamiento podemos mejorar parte de nuestro equipo, poniendo dicho encantamiento en armas, zapatos, brazaletes, pecho, capa, guantes y escudo. Este encantamiento es permanente a no ser que nos cambiemos el objeto o pongamos otro encantamiento diferente en el mismo. <br>Para conseguir los materiales que necesitamos para hacer los encantamientos, tendremos que desencantar equipo que se convertirá en polvo. <br>Normalmente se suele emparejar esta profesión con Sastrería. <br>Para poder hacer Encantamiento, necesitaremos una Vara de encantamiento como <b>Vara rúnica de arcanista</b> que debemos tener siempre en nuestra mochila encima. Si lo tenemos en el banco, no podremos desencantar.</b></p>
             <h4>Botánica</h4>
             <p>Actualmente lo conocemos como Herbolistería. Se suele compaginar con Alquimia para poder usar las plantas como componentes de recetas.</p>
             <h4>Minería</h4>
