--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
         body
         {
-            background="imagenes/index/FondoUniverso.webp";
             width: 100%;
             height: 600px;
             margin: auto;
@@ -21,7 +20,7 @@
         .contorno{
             width: 350px;
             height: 350px;
-            background-color: rgba(64, 2, 122, 0.479);
+            background-color: rgba(126, 0, 0, 0.479);
             border-radius: 10%;
             padding: 50px;
             display: flex;
@@ -40,14 +39,14 @@
             font-family: "Homer Simpson UI";}
 
         .boton1{
-            background-color: rgb(37, 0, 78);
+            background-color: rgb(251, 83, 83);
             color: #fff;
             width: 200px;
             font-family: cursive;
             font-size:x-large;}
         .boton2{
             width: 250px;
-            background-color: rgb(37, 0, 78);
+            background-color: rgb(126, 30, 30);
             color: #fff;
             font-family: cursive;
             font-size:x-large;}
@@ -68,7 +67,7 @@
 
         hr{
             height: 1px;
-            background-color: rgb(102, 0, 185);}
+            background-color: rgb(77, 77, 77);}
 
         div .line
         {
@@ -87,7 +86,7 @@
 
     </style>
 </head>
-<body background="images\index\FondoUniverso.webp">
+<body background="images/General/fondoRojo.jpg">
 
     <form>
     <div class="contorno">
