Carga de imagenes en carpeta herreria y carga de datos del html herreria

--- a/home.html
+++ b/home.html
@@ -11,15 +11,15 @@
         <img src="images/General/banner1.jpg" alt="" class="banner">
         <nav><ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="home.html">Alquimia</a></li>
-            <li><a href="home.html">Herbolisteria</a></li>
-            <li><a href="home.html">Herreria</a></li>
-            <li><a href="home.html">Ingenieria</a></li>
-            <li><a href="home.html">Mineria</a></li>
-            <li><a href="home.html">Sastreria</a></li>
-            <li><a href="home.html">Encantamiento</a></li>
-            <li><a href="home.html">Pelateria</a></li>
-            <li><a href="home.html">Desollar</a></li>  
+            <li><a href="alchemy.html">Alquimia</a></li>
+            <li><a href="herbalism.html">Herbolisteria</a></li>
+            <li><a href="blacksmithing.html">Herreria</a></li>
+            <li><a href="engineering.html">Ingenieria</a></li>
+            <li><a href="mining.html">Mineria</a></li>
+            <li><a href="tailoring.html">Sastreria</a></li>
+            <li><a href="enchanting.html">Encantamiento</a></li>
+            <li><a href="leatherworking.html">Pelateria</a></li>
+            <li><a href="skinning.html">Desollar</a></li>  
         </ul></nav>
     </header>
 
@@ -158,6 +158,7 @@
             <h4>Primeros Auxilios</h4>
             <p>Primeros Auxilios tiene una gran ventaja, que es poder vendar a caulquiera, no solamente a nosotros mismos. Al vendar, lo que hacemos es curar. Y esta sanación se hace siempre y cuando estemos fuera de combate. <br>Además podemos hacer anti-venenos aunque éstps son más potentes con las recestas de Alquimia.</p>
         </article>
+    </section>
     </div>
 </body>
 </html>
