Resumo la pestaña herreria y agrego pestaña ingenieria

--- a/blacksmithing.html
+++ b/blacksmithing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -25,16 +25,16 @@
 
     <section>
         <article>
-            <img src="/images/blacksmithing/guiaDeHerreria.png" alt="">
+            <div align="center"><img src="images/blacksmithing/guiaDeHerreria.png" alt="" class="logoGuia"></div>
             <p>Los herreros utilizan su pericia con el martillo y el yunque para crear armas mortales, pesados trajes de malla, armaduras de placas y más objetos especializados. Los herreros con verdadero talento también pueden modificar su propio equipo añadiendo ranuras para gemas mágicas. El equipamiento que fabrican permite a los herreros equipar a los miembros del grupo o de la hermandad y a sí mismos (sobre todo a aquellos que llevan armaduras pesadas), y vender sus productos en la casa de subastas.</p>
             <p>La mayor parte del trabajo de herrería debe realizarse con un martillo y un yunque. Se pueden encontrar yunques de herrería (y forjas para fundir minerales) en casi todas las ciudades y capitales.</p>
             <p>A menudo, la herrería suele ir de la mano de la profesión de recolección minería, ya que los minerales que se obtienen al picar menas suelen ser componentes esenciales de la mayoría de las armas y armaduras.</p>
         </article>
         <article>
-            <img src="/images/blacksmithing/subiendo herreria.jpg" alt="">
+            <img src="images/blacksmithing/subiendo herreria.jpg" alt="">
             <p>Como sucede con cualquier profesión, nuestra primera parada debe ser junto al instructor de herrería (Orgrimmar, Ventormenta...) para que nos enseñe esta profesión primaria y el desarrollo de habilidad "Aprendiz herrero" que nos permitirá ponernos manos a la obra con esta profesión.</p>
             <p>La presente guía la dividiremos en tres partes. La primera se centrará en detallaros los materiales necesarios para subir la profesión, la segunda, el método para llegar a los 300 puntos con herrería y por último, las dos especializaciones de ingeniería.</p>
-            <img src="/images/blacksmithing/Saru Furiacerada.jpg" alt="">
+            <img src="images/blacksmithing/Saru Furiacerada.jpg" alt="">
         </article>
         <article>
             <h3>Materiales necesarios</h3>
@@ -93,7 +93,7 @@
                 <li>Yelmo de placas de acero: hasta llegar a los 225 puntos de habilidad (10 unidades creadas).</li>
             </ul>
             <p>Alcanzados los 225 puntos de habilidad en herrería es el momento de dirigirnos hasta Bahía del Botín para hablar con Brikk Finoficio y nos enseñe la habilidad "Herrero artesano" para afrontar el último paso para subir Herrería.</p>
-            <img src="/images/blacksmithing/Brinkk Finoficio.jpg" alt="">
+            <img src="images/blacksmithing/Brinkk Finoficio.jpg" alt="">
         </article>
         <article>
             <h3>Herrería 225-300</h3>
@@ -115,70 +115,8 @@
             <ul>
                 <li>Botas de torio: hasta llegar a los 300 puntos de habilidad (5 unidades creadas)</li>
             </ul>
-            <img src="/images/blacksmithing/Botas de torio.jpg" alt="">
+            <img src="images/blacksmithing/Botas de torio.jpg" alt="">
         </article>
-        <article>
-            <img src="/images/blacksmithing/especializacion herreria.jpg" alt="">
-            <p>¿Quieres especializarte en una de las ramas de Herrería? Piensa bien cuál va a ser tu decisión porque NO es posible cambiar de especialización en Classic.</p>
-            <p>Una vez llegues a nivel 40 con tu personaje y con un mínimo de 200 puntos de habilidad en Herrería, es el momento de dirigirnos a Orgrimmar (Horda) o Forjaz (Alianza) para convertirnos en Forjador de armaduras o Forjador de armas.</p>
-        </article>
-        <article>
-            <h3>Forjador de Armaduras</h3>
-            <p>Nuestro primer paso nos llevará a visitar a Okothos Ira de Hierro en Ogrimmar si pertenecemos a la Horda o Grumnus Forjacero en Forjaz si nuestra facción es la Alianza. Nos otorgarán la misión El arte del forjador de armaduras y la cuál nos pedirá entregar los siguientes materiales:</p>
-            <ul>
-                <li>4 Yelmo de mitril ornamentado.</li>
-                <li>2 Botas de mitril ornamentado.</li>
-                <li>1 Coraza de mitril ornamentado.</li>
-            </ul>
-            <p>Tras entregar estos requisitos, las misiones se dividirán en dos partes dependiendo de nuestra facción:</p>
-            <ul>
-                <li>Horda: hablaremos con Aturk el Yunque en Orgrimmar para obtener la misión Los viejos hábitos y teniendo que entregarle 4 Coraza de acero y 4 Yelmo de placas de acero. Completado el requisito, nos proporcionará la misión Booty Bay o Bust ! para acudir junto a McGavan en la Vega de Tuercespina.</li>
-                <li>Alianza: hablaremos con Hank el Martillo en Ventormenta para obtener la misión El origen de la herrería y teniéndolo que entregar 6 Brazales de escamas doradas. Completado el requisito, nos proporcionará la misión Buscando a Galvan para acudir junto a McGavan en la Vega de Tuercespina.</li>
-            </ul>
-            <p>Los caminos de ambas facciones se superponen de nuevo. Tras entregar las últimas misiones, nos proporcionarán la misión El pedido de mitril, teniendo que hablar con Galvan el Antiguo en la Vega de Tuercespina. Galvan el Antiguo nos proporcionará 3 nuevas misiones con requisitos variados:</p>
-            <ul>
-                <li>Funde o no funde: entregaremos 40 Barra de mitril y 40 Barra de hierro.</li>
-                <li>El arte de imbuir: entregaremos 40 Barra de mitril y 3 Citrino.</li>
-                <li>La veraplata no es verídica: entregaremos 40 Barra de mitril y 5 Barra de veraplata.</li>
-            </ul>
-            <p>A continuación Galvan el Antiguo nos proporcionará la misión ¡Experto herrero!, siendo prácticamente autocompletable y El mejor alumno de Galvan, teniendo que viajar hasta Tanaris para encontrarnos con Trenton Lighthammer y que nos ofrecerá a su vez tres nuevas misiones:</p>
-            <ul>
-                <li>El mundo a tus pies: entregaremos 2 Botas de mitril pesado y 1 Pantalones de mitril ornamentado.</li>
-                <li>La cabeza sobre los hombros: entregaremos 2 Almófar de mitril y 1 Sobrehombros de mitril ornamentado.</li>
-                <li>El chico de mitril: entregaremos 2 Coraza de mitril pesado y 1 Guantes de mitril ornamentado.</li>
-            </ul>
-            <p>Entregadas dichas misiones, nos proporcionará una misión muy sencilla, ¿Has perdido esto?. Tras completarla, volveremos junto a Bengus Forjahondaen Forjaz (Alianza) o Krathok Puñofundido en Orgrimmar (Horda) para elegir Forjador de armaduras. Realizado este paso, hablaremos con Okothos Ira de Hierro o Grumnus Forjacero, pidiéndonos los siguientes objetos:</p>
-            <ul>
-                <li>4 Yelmo de mitril ornamentado.</li>
-                <li>2 Botas de mitril ornamentado.</li>
-                <li>1 Coraza de mitril ornamentado.</li>
-            </ul>
-            <p>Este es el paso final que tras completarlo, nuestro personaje se convertirá finalmente en Forjador de armaduras.</p>
-            <img src="/images/blacksmithing/Okothos Ira de Hierro.jpg" alt="">
-        </article>
-        <article>
-            <h3>Forjador de Armas</h3>
-            <p>En primer lugar acudiremos junto a Borgosh Ramagma en Orgrimmar (Horda) o Ironus Acero Frío en Forjaz (Alianza) para aceptar la misión El arte del forjador de armas. Deberemos fabricar las siguientes armas:</p>
-            <ul>
-                <li>4 Espada ancha de acero lunar. Para realizar este arma, tendremos que acudir junto a Zarena Cromventoen Bahía del Botín para comprar el Diseño: espada ancha de acero lunar.</li>
-                <li>2 Maza negra grande. Para realizar este arma, tendremos que aprenderlo de Brikk Finoficioen Bahía del Botín.</li>
-                <li>2 Hacha de mitril pesado. Para realizar este arma, tendremos que aprenderlo de Brikk Finoficio en Bahía del Botín.</li>
-                <li>4 Hacha de hierro macizo. Para realizar este arma, tendremos que acudir junto a Jaquilina DrametVharren la Vega de Tuercespina para comprar el Diseño: hacha de hierro macizo.</li>
-            </ul>
-            <p>Una vez entreguemos la misión, nos convertiremos en Forjador de armas y será el momento de elegir entre tres sub-especializaciones.</p>
-            <img src="/images/blacksmithing/Borgosh Ramagma.jpg" alt="">
-        </article>
-        <article>
-            <h3>Maestro Forjador de Hachas</h3>
-            <p>Para convertirnos en Maestro forjador de hachas, acudiremos junto a Kilram en Cuna del Invierno (Vista Eterna) para recibir la misión Piedra Serpiente de la Cazadora de las Sombras. Tendremos que derrotar a Cazador de las Sombras Vosh'gajin en Cumbre de Roca Negra para conseguir la Piedra culebra de Vosh'gajin. Tras completarla, nos obsequiará con Diseño: Filo del Alba y nos convertiremos en Maestro forjador de hachas.</p>
-        </article>
-        <article>
-            <h3>Maestro Forjador de Martillos</h3>
-            <p>Para convertirnos en Maestro forjador de martillos, acudiremos junto a Lilith la Ágil en Cuna del Invierno (Vista Eterna) para recibir la misión Dulce serenidad. Tendremos que derrotar a Forjador de martillos carmesí en Stratholme para conseguir el Delantal del forjamartillos Carmesí. Tras completarla, nos obsequiará con Diseño: martillo de batalla encantado y nos convertiremos en Maestro forjador de martillos.</p>
-        </article>
-        <h3>Maestro Invocador</h3>
-        <p>Para convertirnos en Maestro forjador de espadas, acudiremos junto a Seril Finiquiplaga en Cuna del Invierno (Vista Eterna) para recibir la misión Corrupción. Tendremos que derrotar a Armero Guardia Negra en Stratholme para conseguir la Insignia de La Guardia Negra. Tras completarla, nos obsequiará con Diseño: Estoque llameante y nos convertirá en Maestro forjador de espadas.</p>
-        <img src="/images/blacksmithing/Maestro invocador.jpg" alt="">
     </section>
     </div>
 </body>
