--- a/home.html
+++ b/home.html
@@ -31,33 +31,28 @@
             <table><tr><td>
                 <h2>Contenido</h2>
                 <ul>
-                    <ol><a href="#sistProfesiones">1 Sistema de profesiones en WoW Classic</a></ol>
-                    <ol><a href="#">2 Niveles de profesión</a></ol>
-                    <ol><a href="#">3 Rangos de profesión</a></ol>
-                    <ol><a href="#">4 Raciales de profesión</a></ol>
-                    <ol><a href="#">5 Objetos necesarios para profesiones</a></ol>
-                    <ol><a href="#">6 Profesiones Primarias</a>
-                        <ol><a href="#">6.1 Alquimia</a></ol>
-                        <ol><a href="#">6.2 Herrería</a></ol>
-                        <ol><a href="#">6.3 Ingeniería</a></ol>
-                        <ol><a href="#">6.4 Peletería</a></ol>
-                        <ol><a href="#">6.5 Sastrería</a></ol>
-                        <ol><a href="#">6.6 Desuello</a></ol>
-                        <ol><a href="#">6.7 Encantamiento</a></ol>
-                        <ol><a href="#">6.8 Botánica</a></ol>
-                        <ol><a href="#">6.9 Minería</a></ol>
-                    </ol>
-                    <ol><a href="#">7 Profesiones Secundarias</a>
-                        <ol><a href="#">7.1 Cocina</a></ol>
-                        <ol><a href="#">7.2 Pesca</a></ol>
-                        <ol><a href="#">7.3 Primeros Auxilios</a></ol>
+                    <ol><a href="#SP">1 Sistema de profesiones en WoW Classic</a></ol>
+                    <ol><a href="#NP">2 Niveles de profesión</a></ol>
+                    <ol><a href="#RP">3 Rangos de profesión</a></ol>
+                    <ol><a href="#RaP">4 Raciales de profesión</a></ol>
+                    <ol><a href="#OP">5 Objetos necesarios para profesiones</a></ol>
+                    <ol><a href="#PP">6 Profesiones Primarias</a>
+                        <ol><a href="#A">6.1 Alquimia</a></ol>
+                        <ol><a href="#H">6.2 Herrería</a></ol>
+                        <ol><a href="#I">6.3 Ingeniería</a></ol>
+                        <ol><a href="#P">6.4 Peletería</a></ol>
+                        <ol><a href="#S">6.5 Sastrería</a></ol>
+                        <ol><a href="#D">6.6 Desuello</a></ol>
+                        <ol><a href="#E">6.7 Encantamiento</a></ol>
+                        <ol><a href="#B">6.8 Botánica</a></ol>
+                        <ol><a href="#M">6.9 Minería</a></ol>
                     </ol>
                 </ul>
             </td></tr></table>
         </article>
 
         <article>
-            <a id="sistProfesiones"><h3>Sistemas de Profesiones en WoW Classic</h3></a>
+            <a id="SP"><h3>Sistemas de Profesiones en WoW Classic</h3></a>
             <p>Los jugadores podemos elegir entre dos Profesiones Primarias. Estas profesiones serían:</p>
             <ul>
                 <li>Alquimia</li>
@@ -70,12 +65,6 @@
                 <li>Desuello</li>
                 <li>Sastrería</li>
             </ul>
-            <p>En cuanto a las Profesiones Secundarias encontramos:</p>
-            <ul>
-                <li>Cocina</li>
-                <li>Pesca</li>
-                <li>Primeros Auxilios</li>
-            </ul>
             <p>Algunas profesiones tienen subclases adicionales con recetas únicas:</p>
             <ul>
                 <li>Ingeniería - Goblin y Gnomica</li>
@@ -84,12 +73,12 @@
         </article>
 
         <article>
-            <h3>Niveles de profesión</h3>
+            <a id="NP"><h3>Niveles de profesión</h3></a>
             <p>Para subir el nivel de profesión solamente tenemos que ir haciendo o recolectando objetos hasta que el juego determine que es demasiado fácil hacerlo. Para saber este punto, se diferencia en colores: si a la hora de hacerlo/recolectarlo nos aparece en <span>naranja</span>, tiene una probabilidad del 100% de darnos un punto de nivel. Si aparece en <span>amarillo</span>, la probabilidad de conseguir el punto de habilidad es frecuente. Si aparece en <span>verde</span>, la probabilidad es poco frecuente. Y si aparece en <span>gris</span>, no nos va a dar ningún punto de nivel de habilidad.</p>
         </article>
 
         <article>
-            <h3>Rangos de Profesión</h3>
+            <a id="RP"></a><h3>Rangos de Profesión</h3>
             <p>Según vamos subiendo de nivel de profesión, también tenemos que aprender los rangos que nos enseña el instructor.</p>
             <ul>
                 <li>Aprendiz - del nivel 1 al 50</li>
@@ -108,7 +97,7 @@
         </article>
 
         <article>
-            <h3>Raciales de profesiones</h3>
+            <a id="RaP"></a><h3>Raciales de profesiones</h3>
             <p>Tenemos dos razas que ofrecen bonificación para las profesiones:</p>
             <ul>
                 <li>Los Tauren tiene la racial de Cultivo, que aumenta la habilidad de Botánica en 15p</li>
@@ -117,7 +106,7 @@
         </article>
 
         <article>
-            <h3>Objetos necesarios para profesiones</h3>
+            <a id="OP"></a><h3>Objetos necesarios para profesiones</h3>
             <p>Necesitaremos llevar encima ciertos objetos dependiendo de la profesión. Estos objetos no podemos dejarlos en el banco, siempre tienen que estar en nuestra mochila a la hora de crear o fabricar.</p>
             <ul>
                 <li>Con <b>Herrería</b> tendremos que llevar el <b>Martillo de Herrero</b> y usarlo en el Yunque.</li>
@@ -128,35 +117,34 @@
         </article>
 
         <article>
-            <h3>Profesiones Primarias</h3>
-            <h4>Alquimia</h4>
+            <a id="PP"></a><h3>Profesiones Primarias</h3>
+            <a id="A"></a><h4>Alquimia</h4>
+            <img src="images/home/alquimia.jpg" alt="" class="logoProfesion">
             <p>Con la profesión de Alquimia podremos crear frascos, pociones, elixires y otros objetos que podemos usar para obtener un beneficio. Es muy útil para mazmorras y bandas y lo habitual es compaginarlo con Botánica para poder obtener los materiales(hierbas) para hacer los objetos. <br>También podemos complementarlo con Pesca como profesión secundaria y obtener el Aceite de Pescado, entre otros, que necesitaremos en algunos casos.</p>
-            <h4>Herrería</h4>
+            <a id="H"></a><h4>Herrería</h4>
+            <img src="images/home/herreria.png" alt="" class="logoProfesion">
             <p>Esta profesión la aprendemos pricipalmente aquellos que necesitan usar Placas, aunque también se hacen objetos de Malla, ya que principalmente obtendremos recetas para equipo. <br>Se combina con Minería para conseguir las menas necesarias. <br>También podremos fabricar armas.</p>
-            <h4>Ingeniería</h4>
+            <a id="I"></a><h4>Ingeniería</h4>
+            <img src="images/home/ingenieria.jpg" alt="" class="logoProfesion">
             <p>En WoW Classic, Ingeniería es la más divertida, con la que podremos hacer objetos con utilidades únicas para DPS y especialmente para JcJ. Un ejemplo es la <b>Bomba Arcana</b> que pueden usar los DPS para silenciar y drenar maná.</p>
-            <h4>Pelatería</h4>
+            <a id="P"></a><h4>Pelatería</h4>
+            <img src="images/home/pelateria.png" alt="" class="logoProfesion">
             <p>Con Pelatería podemos hacer objetos de Cuero y Malla. Normalmente se acompaña con Desuello para poder obtener materiales para hacer los objetos. <br>Cuando llegamos al máximo nivel, podemos hacer conjuntos de objetos necesarios en JcE que tiee resistencias, como <b>Malla de Dragón Verde</b> con resistencia naturaleza</b></p>
-            <h4>Sastrería</h4>
+            <a id="S"></a><h4>Sastrería</h4>
+            <img src="images/home/sastreria.png" alt="" class="logoProfesion">
             <p>Lo habitual es que los casters aprendan Sastrería junto a Encantamiento. <br>En Sastrería aprenderemos a hacer objetos de Tela y Capas. Cuando llegamos al máximo nivel los objetos que hacemos ofrecen resistencia y bonificación. Los materiales que necesitaremos los iremos recogiendo de humanoides y comprando a comerciantes, principalmente. <br>Además, con Sastrería podemos conseguir hacer bolsas con más espacio, como <b>Bolsa de Paño Rúnico</b>, pero también podemos hacer bolsas especiales para profesiones como la <b>Cartera de Cenarius</b>, o una bolsa especial para Brujos <b>Bolsa de tela vil del Núcleo</b>.</p>
-            <h4>Desuello</h4>
+            <a id="D"></a><h4>Desuello</h4>
+            <img src="images/home/desuello.jpg" alt="" class="logoProfesion">
             <p>Desuello es la profesión que complementa a Pelatería, ya que proporciona cueros, hierbas y escamas que son necesarias para algunas recetas. <br>Para poder desollar a un cuerpo que nos vaya a proporcionar cuero, necesitaremos tener siempre en nuestra mochila un <b>Cuchillo para Desollar</b> que debemos comprar previamente.</b></p>
-            <h4>Encantamiento</h4>
+            <a id="E"></a><h4>Encantamiento</h4>
+            <img src="images/home/encantamiento.png" alt="" class="logoProfesion">
             <p>Con encantamiento podemos mejorar parte de nuestro equipo, poniendo dicho encantamiento en armas, zapatos, brazaletes, pecho, capa, guantes y escudo. Este encantamiento es permanente a no ser que nos cambiemos el objeto o pongamos otro encantamiento diferente en el mismo. <br>Para conseguir los materiales que necesitamos para hacer los encantamientos, tendremos que desencantar equipo que se convertirá en polvo. <br>Normalmente se suele emparejar esta profesión con Sastrería. <br>Para poder hacer Encantamiento, necesitaremos una Vara de encantamiento como <b>Vara rúnica de arcanista</b> que debemos tener siempre en nuestra mochila encima. Si lo tenemos en el banco, no podremos desencantar.</b></p>
-            <h4>Botánica</h4>
+            <a id="B"></a><h4>Botánica</h4>
+            <img src="images/home/herboristeria.png" alt="" class="logoProfesion">
             <p>Actualmente lo conocemos como Herbolistería. Se suele compaginar con Alquimia para poder usar las plantas como componentes de recetas.</p>
-            <h4>Minería</h4>
+            <a id="M"></a><h4>Minería</h4>
+            <img src="images/home/mineria.jpg" alt="" class="logoProfesion">
             <p>Minería es la profesión óptima para Herrería e Ingeniería, para obtener materiales para las recetas de dichas profesiones. Podremos recolectar menas por el mundo, pero debemos llevar encima siempre un <b>Pico de minero</b> y no olvidarlo en el banco. <br>Además, cuando hayamos recolectado las menas, debemos fundirlas cerca de un horno para convertirlo en barras, que es el material que nos pedirán para hacer recetas.</b></p>
-        </article>
-
-        <article>
-            <h3>Profesiones Secundarias</h3>
-            <h4>Cocina</h4>
-            <p>Con Cocina podemos hacer comidas que al consumirlas nos darán salud y maná. Tambien se pueden obtener beneficios como estar *Bien Alimentado* que aumenta estadísticas, algo muy útil para hacer mazmorras y bandas. <br>Para cocinar necesitaremos Fuego de Cocina, bien en una cocina específica, bien podemos hacerla nosotros. Para hacerla, necesitaremos Madera simple, Sílex y Yesca.</p>
-            <h4>Pesca</h4>
-            <p>Pesca es una profesión que nos llevará mucho tiempo subir. Pero con ello, podremos obtener ciertas recetas o ingredientes específicos para otras profesiones. <br>Para poder pescar nos tenemos que hacer con una Caña de pescar que debemos tener en la mochila para poder sustituir nuestra arma, es decir, tendremos que equipárnosla. <br>Según tengamos el nivel de habilidad de Pesca, tendremos más o menos suerte de pescar un pez. En zonas de mayor nivel tendremos mayor probabilidad de subir de nivel. <br>Al pescar en un círculo marcado con un pez especifico nos dará mayor probabilidad de obtenerlo que si lo hacemos en cualquier otra zona del agua. <br>Algunos peces solamente aparecerán durante el día o durante la noche.</p>
-            <h4>Primeros Auxilios</h4>
-            <p>Primeros Auxilios tiene una gran ventaja, que es poder vendar a caulquiera, no solamente a nosotros mismos. Al vendar, lo que hacemos es curar. Y esta sanación se hace siempre y cuando estemos fuera de combate. <br>Además podemos hacer anti-venenos aunque éstps son más potentes con las recestas de Alquimia.</p>
         </article>
     </section>
     </div>
